--- a/project/0.4/config/default.yaml
+++ b/project/0.4/config/default.yaml
@@ -1,4 +1,4 @@
-%YAML:1.0
+%YAML 1.0
 # data
 # the tum dataset directory, change it to yours! 
 dataset_dir: /home/rm/SLAM/Book/slamtest/project/datasets/rgbd_dataset_freiburg3_sitting_static
