--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,6 @@ ui_*
 # datasets
 ch8/data/data/
 /ch8/rgbd_dataset_freiburg3_sitting_static
-project/datasets/
+project/datasets/**
+!project/datasets/config/
+!project/datasets/config/**
